# lada-vulkan

./: .gitignore
docs/: basicvsrpp_vulkan_runtime.md  cpu_restoration_pipeline.md  detection_ncnn_vulkan.md  torch_cuda_source_baseline.md  vulkan_media_io_notes.md
lada/: compute_targets.py  parity.py  parity_report.py  parity_restoration_core.py  parity_restoration_pipeline.py  parity_restoration_rollout.py
lada/cli/: batch_runner.py  device_parity.py  device_regression.py  main.py  pipeline_runner.py  runtime_feature_overrides.py  utils.py
lada/extensions/: runtime_registry.py
lada/extensions/iree/: __init__.py  artifacts.py  compiler.py  pipeline.py  (+5 more)
lada/gui/: frame_restorer_provider.py  utils.py
lada/restorationpipeline/: __init__.py  basicvsrpp_mosaic_restorer.py  basicvsrpp_vulkan_artifacts.py  basicvsrpp_vulkan_blend.py  basicvsrpp_vulkan_common.py  basicvsrpp_vulkan_cpu_extractor.py  basicvsrpp_vulkan_export.py  basicvsrpp_vulkan_io.py  basicvsrpp_vulkan_recurrent_runtime.py  basicvsrpp_vulkan_restore_paths.py  basicvsrpp_vulkan_restorer.py  basicvsrpp_vulkan_runtime_bootstrap.py  basicvsrpp_vulkan_runtime_support.py  clip_units.py  frame_restorer.py  frame_restorer_blend.py  frame_restorer_clip_ops.py  frame_restorer_worker.py  model_loader.py  mosaic_detector.py  restoration_backends.py  runtime_options.py  runtime_profiling.py
lada/utils/: audio_utils.py  encoding_presets.csv  mask_utils.py  scene_utils.py  threading_utils.py  ultralytics_utils.py  video_utils.py  visualization_utils.py
native/ncnn_vulkan_runtime/: CMakeLists.txt  README.md
native/ncnn_vulkan_runtime/cmake/: patch_ncnn_shared_vulkan_benchmark.cmake
native/ncnn_vulkan_runtime/src/: basicvsrpp_clip_runner.cpp  basicvsrpp_clip_runner.h  lada_gridsample_layer.cpp  lada_yolo_attention_layer.cpp  lada_yolo_attention_layer.h  lada_yolo_seg_postprocess_layer.cpp  lada_yolo_seg_postprocess_layer.h  native_op_profile.h  python_local_runtime_bindings.cpp  torch_conv2d_layer.cpp  torch_conv2d_layer.h  torchvision_deform_conv2d_layer.cpp  vulkan_blend_runtime.cpp  yolo_seg_postprocess_runner.cpp  yolo_seg_postprocess_runner.h
packaging/windows/: README.md  lada.spec  package_executable.ps1  pyinstaller_runtime_hook_lada.py
patches/: gvsbuild_gobject_introspection_py313.patch
scripts/: build_ncnn_vulkan_runtime.ps1
scripts/evaluation/: README.md  compare-restoration-devices.py
scripts/windows/: restore-soa-pic-webm.ps1
tests/: test_basicvsrpp_vulkan_aoz_pipeline_parity.py  test_basicvsrpp_vulkan_cpu_extractor.py  test_basicvsrpp_vulkan_dynamic_runtime_trace.py  test_basicvsrpp_vulkan_fp16_descriptor_trace.py  test_basicvsrpp_vulkan_param_patch.py  test_basicvsrpp_vulkan_recurrent_runtime.py  test_basicvsrpp_vulkan_restore_paths.py  test_basicvsrpp_vulkan_restorer.py  test_basicvsrpp_vulkan_runtime_support.py  test_basicvsrpp_vulkan_small_runtime_trace.py  test_basicvsrpp_vulkan_spynet_precision.py  test_basicvsrpp_vulkan_spynet_wrapper.py  test_cli_runtime_feature_overrides.py  test_frame_restorer.py  test_frame_restorer_descriptor_blend.py  test_gridsample_layer.py  test_ncnn_vulkan_yolo_batch.py  test_ncnn_vulkan_yolo_preprocess.py  test_ncnn_yolo_postprocess_parity.py  test_ncnn_yolo_runtime_support.py  test_ncnn_yolo_selection_parity.py  test_parity.py  test_parity_report.py  test_parity_restoration_rollout.py  test_privateuse1_vulkan.py  test_runtime_extensions.py  test_ultralytics_utils.py  test_video_utils_encoding_presets.py  test_vulkan_clip_sizing.py  test_vulkan_frame_restorer.py  test_vulkan_internal_import_boundaries.py  test_vulkan_repo_import_quarantine.py  test_vulkan_runtime_shims.py
(+88 files in other folders)
